--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_API_BASE_URL="http://api.your-web.solutions/api/v1/"
+REACT_APP_API_BASE_URL="https://api.your-web.solutions/api/v1/"
 REACT_APP_CHECK_LOGIN= false
