--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Muse Ant Design Dashboard",
-  "name": "Muse Ant Design Dashboard",
+  "short_name": "Freshbook Dashboard",
+  "name": "Freshbook Dashboard",
   "icons": [
     {
       "src": "favicon.png",
