--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,7 +49,10 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.5",
     "autoprefixer": "^9.8.8",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "postcss": "^7.0.39"
   }
 }
