--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.7",
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
