--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "axios": "^1.1.3",
     "install": "^0.13.0",
     "moment": "^2.29.4",
-    "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-preloaders": "^3.0.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
