--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.27.1",
     "axios": "^1.1.3",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
