--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-preloaders": "^3.0.3",
@@ -25,7 +26,8 @@
     "styled-components": "^5.3.0",
     "tailwindcss": "^3.2.4",
     "twin.macro": "^3.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "craco start",
