--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "tailwindcss": "^3.2.4",
     "twin.macro": "^3.0.0",
     "web-vitals": "^1.1.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xmldom": "^0.6.0"
   },
   "scripts": {
     "start": "craco start",
