--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
     "react-apexcharts": "^1.3.9",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-preloaders": "^3.0.3",
     "react-query": "^3.39.2",
