--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
     "install": "^0.13.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
